--- a/Izvorna koda/angular-electron/src/app/error-handling/error-handling.component.html
+++ b/Izvorna koda/angular-electron/src/app/error-handling/error-handling.component.html
@@ -7,6 +7,7 @@
 
 <div mat-dialog-content>
   <p>{{data.response}}</p>
+  <p *ngIf="data.status == '0'" > Ni povezave s strežnikom!</p>
 </div>
 <div mat-dialog-actions align="end">
   <button mat-raised-button mat-dialog-close color="primary">Vredu</button>
